corpus/c/syntax/case-05/snapshots/gcc15/render.concise.txt
error: syntax error
--> src/main.c:2:18
help: fix the first parser error at the user-owned location
why: expected ')' before ';' token
| src/main.c:2:18
|     return (1 + 2;
|                  ^
suggested edit: insert ')' at src/main.c:2:18
error: syntax error
--> src/main.c:2:19
help: fix the first parser error at the user-owned location
why: expected ';' before '}}' token
| src/main.c:2:19
note: omitted additional details; rerun with --formed-profile=verbose